# peanutbutter

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
peanutbutter/: __init__.py  __version__.py
